alignment issues solved

--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -26,7 +26,7 @@ ul{
 }
 
 .service-align{
-    margin-left: -1em;
+    margin-left: -1.5em;
 }
 
 .head{
